--- a/package.json
+++ b/package.json
@@ -4,19 +4,23 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@nivo/core": "^0.67.0",
+    "@nivo/heatmap": "^0.67.0",
+    "@nivo/treemap": "^0.67.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "bulma": "^0.9.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
+    "react-chrono": "^1.8.3",
     "react-dom": "^17.0.1",
-    "react-google-charts": "^3.0.15",
     "react-hover": "^2.0.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-switch": "^5.0.1",
+    "react-tradingview-widget": "^1.3.2",
     "recharts": "^1.8.5",
     "web-vitals": "^0.2.4"
   },
