--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.2",
     "@nivo/core": "^0.67.0",
     "@nivo/heatmap": "^0.67.0",
+    "@nivo/radar": "^0.67.0",
     "@nivo/treemap": "^0.67.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
